@@ -12,9 +12,10 @@ import org.elasticsearch.compute.data.BooleanBlock;
 import org.elasticsearch.compute.data.BooleanVector;
 import org.elasticsearch.compute.data.ElementType;
 import org.elasticsearch.compute.data.LongBlock;
-import org.elasticsearch.compute.data.LongVector;
 import org.elasticsearch.compute.data.Page;
+import org.elasticsearch.compute.expression.ExpressionEvaluator;
 import org.elasticsearch.compute.operator.DriverContext;
+import org.elasticsearch.core.Releasables;
 
 import java.util.List;
 
@@ -28,27 +29,30 @@ public class CountAggregatorFunction implements AggregatorFunction {
         return INTERMEDIATE_STATE_DESC;
     }
 
+    private final DriverContext driverContext;
     private final LongState state;
-    private final List<Integer> channels;
+    private final List<ExpressionEvaluator> inputs;
     private final boolean countAll;
 
-    CountAggregatorFunction(List<Integer> channels) {
-        this.channels = channels;
+    CountAggregatorFunction(DriverContext driverContext, List<ExpressionEvaluator> inputs) {
+        this.driverContext = driverContext;
+        this.inputs = inputs;
         this.state = new LongState(0);
-        this.countAll = channels.isEmpty();
+        this.countAll = inputs.isEmpty();
+        boolean success = false;
+        try {
+            driverContext.breaker().addEstimateBytesAndMaybeBreak(ExpressionEvaluator.totalRamBytesUsed(inputs), "ESQL");
+            success = true;
+        } finally {
+            if (success == false) {
+                this.state.close();
+            }
+        }
     }
 
     @Override
     public int intermediateBlockCount() {
         return intermediateStateDesc().size();
-    }
-
-    private int blockIndex() {
-        // In case of countAll, block index is irrelevant.
-        // Page.positionCount should be used instead,
-        // because the page could have zero blocks
-        // (drop all columns scenario)
-        return countAll ? -1 : channels.get(0);
     }
 
     @Override
@@ -57,31 +61,29 @@ public class CountAggregatorFunction implements AggregatorFunction {
             // this will work also when the page has no blocks
             if (mask.isConstant() && mask.getBoolean(0)) {
                 state.longValue(state.longValue() + page.getPositionCount());
-            } else {
-                int count = 0;
-                for (int i = 0; i < mask.getPositionCount(); i++) {
-                    if (mask.getBoolean(i)) {
-                        count++;
-                    }
-                }
-                state.longValue(state.longValue() + count);
+                return;
             }
-        } else {
-            Block block = page.getBlock(blockIndex());
+            int count = 0;
+            for (int i = 0; i < mask.getPositionCount(); i++) {
+                if (mask.getBoolean(i)) {
+                    count++;
+                }
+            }
+            state.longValue(state.longValue() + count);
+            return;
+        }
+        try (Block block = inputs.getFirst().eval(page)) {
             if (block.areAllValuesNull()) {
                 return;
             }
-            LongState state = this.state;
-            int count;
             if (mask.isConstant()) {
                 if (mask.getBoolean(0) == false) {
                     return;
                 }
-                count = getBlockTotalValueCount(block);
-            } else {
-                count = countMasked(block, mask);
+                state.longValue(state.longValue() + getBlockTotalValueCount(block));
+                return;
             }
-            state.longValue(state.longValue() + count);
+            state.longValue(state.longValue() + countMasked(block, mask));
         }
     }
 
@@ -124,18 +126,15 @@ public class CountAggregatorFunction implements AggregatorFunction {
 
     @Override
     public void addIntermediateInput(Page page) {
-        assert channels.size() == intermediateBlockCount();
-        var blockIndex = blockIndex();
-        assert page.getBlockCount() >= blockIndex + intermediateStateDesc().size();
-        Block uncastBlock = page.getBlock(channels.get(0));
-        if (uncastBlock.areAllValuesNull()) {
-            return;
+        assert inputs.size() == intermediateBlockCount();
+        try (LongBlock count = (LongBlock) inputs.getFirst().eval(page); BooleanBlock seen = (BooleanBlock) inputs.get(1).eval(page)) {
+            if (count.areAllValuesNull()) {
+                return;
+            }
+            assert count.getPositionCount() == 1;
+            assert count.getPositionCount() == seen.getPositionCount();
+            state.longValue(state.longValue() + count.getLong(0));
         }
-        LongVector count = page.<LongBlock>getBlock(channels.get(0)).asVector();
-        BooleanVector seen = page.<BooleanBlock>getBlock(channels.get(1)).asVector();
-        assert count.getPositionCount() == 1;
-        assert count.getPositionCount() == seen.getPositionCount();
-        state.longValue(state.longValue() + count.getLong(0));
     }
 
     @Override
@@ -152,14 +151,18 @@ public class CountAggregatorFunction implements AggregatorFunction {
     public String toString() {
         StringBuilder sb = new StringBuilder();
         sb.append(this.getClass().getSimpleName()).append("[");
-        sb.append("channels=").append(channels);
+        sb.append("inputs=").append(inputs);
         sb.append("]");
         return sb.toString();
     }
 
     @Override
     public void close() {
-        state.close();
+        Releasables.closeExpectNoException(
+            state,
+            Releasables.wrap(inputs),
+            () -> driverContext.breaker().addWithoutBreaking(-ExpressionEvaluator.totalRamBytesUsed(inputs))
+        );
     }
 
     public static AggregatorFunctionSupplier supplier() {
@@ -178,8 +181,8 @@ public class CountAggregatorFunction implements AggregatorFunction {
         }
 
         @Override
-        public AggregatorFunction aggregator(DriverContext driverContext, List<Integer> channels) {
-            return new CountAggregatorFunction(channels);
+        public AggregatorFunction aggregator(DriverContext driverContext, List<ExpressionEvaluator> inputs) {
+            return new CountAggregatorFunction(driverContext, inputs);
         }
 
         @Override
